--- a/composer.json
+++ b/composer.json
@@ -7,5 +7,8 @@
             "email": "bad4iz@gmail.com"
         }
     ],
-    "require": {}
+    "require": {
+        "kint-php/kint": "^2.2",
+        "twig/twig": "~2.0"
+    }
 }
