--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     ],
     "require": {
         "kint-php/kint": "^2.2",
-        "twig/twig": "~2.0"
+        "twig/twig": "~2.0",
+        "slim/slim": "^3.0"
     }
 }
