--- a/composer.json
+++ b/composer.json
@@ -11,5 +11,10 @@
         "kint-php/kint": "^2.2",
         "twig/twig": "~2.0",
         "slim/slim": "^3.0"
+    },
+    "autoload": {
+        "psr-4": {
+            "Core\\": "core"
+        }
     }
 }
