--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,9 @@
     },
     "autoload": {
         "psr-4": {
-            "Core\\": "core"
+            "Core\\": "core",
+            "TestProject\\": "projects/testProject"
+
         }
     }
 }
